--- a/app/globals.css
+++ b/app/globals.css
@@ -1,28 +1,69 @@
 @tailwind components;
 @tailwind utilities;
 
+/* jetbrains-mono */
 @font-face {
-  font-family: 'Geist';
-  src: url('https://cossistant.com/_next/static/media/caa3a2e1cccd8315-s.p.woff2') format("woff2");
-  font-weight: 100 900;
-  font-style: normal;
-  font-display: swap;
+  font-family: "JetBrains Mono";
+  src: url("https://cdn.jsdelivr.net/fontsource/fonts/jetbrains-mono@latest/latin-400-italic.woff2")
+    format("woff2");
+  font-weight: 435;
+  font-style: italic;
 }
 
 @font-face {
-  font-family: 'Geist Mono';
-  src: url('https://cossistant.com/_next/static/media/797e433ab948586e-s.p.woff2') format("woff2");
-  font-weight: 100 900;
+  font-family: "JetBrains Mono";
+  src: url("https://cdn.jsdelivr.net/fontsource/fonts/jetbrains-mono@latest/latin-400-normal.woff2")
+    format("woff2");
+  font-weight: 435;
   font-style: normal;
-  font-display: swap;
 }
 
 @font-face {
-  font-family: 'F37Stout';
-  src: url('https://cossistant.com/_next/static/media/F37Stout_Regular-s.p.woff2') format("woff2");
+  font-family: "Inter";
+  src: url("https://cdn.jsdelivr.net/fontsource/fonts/inter@latest/latin-400-italic.woff2")
+    format("woff2");
+  font-weight: 400;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "Inter";
+  src: url("https://cdn.jsdelivr.net/fontsource/fonts/inter@latest/latin-400-normal.woff2")
+    format("woff2");
   font-weight: 400;
   font-style: normal;
-  font-display: swap;
+}
+
+@font-face {
+  font-family: "Inter";
+  src: url("https://cdn.jsdelivr.net/fontsource/fonts/inter@latest/latin-500-normal.woff2")
+    format("woff2");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Inter";
+  src: url("https://cdn.jsdelivr.net/fontsource/fonts/inter@latest/latin-600-normal.woff2")
+    format("woff2");
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Inter";
+  src: url("https://cdn.jsdelivr.net/fontsource/fonts/inter@latest/latin-700-normal.woff2")
+    format("woff2");
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Space Grotesk";
+  src: url("https://cdn.jsdelivr.net/fontsource/fonts/space-grotesk@latest/latin-700-normal.woff2")
+    format("woff2");
+  font-weight: 800;
+  font-style: normal;
 }
 
 @tailwind base;
@@ -108,10 +149,15 @@
 
   body {
     @apply bg-background text-foreground;
+    font-family: "Inter", ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     font-feature-settings: "rlig" 1, "calt" 1;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     margin: 0;
     padding: 0;
+  }
+
+  code, pre, .font-mono {
+    font-family: "JetBrains Mono", ui-monospace, SFMono-Regular, "SF Mono", Menlo, Consolas, "Liberation Mono", monospace;
   }
 }
